--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="detailedReleaseDate"> Release Date: </string>
     <string name="trailer">Trailers</string>
     <string name="noIntenetConnection">No internet connection detected. Kindly connect</string>
+    <string name="addFavouritesDetailActivity">Add to Favourites</string>
+    <string name="removeFavouritesDetailActivity">Remove from Favourites</string>
 </resources>
